--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-checker": "^0.6.1",
     "vue-tsc": "^1.4.2"
   }
 }
