--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
@@ -16,13 +18,21 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitest/coverage-v8": "^0.32.2",
+    "@vue/test-utils": "^2.4.0",
     "autoprefixer": "^10.4.14",
+    "happy-dom": "^9.20.3",
+    "jest": "^29.5.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-checker": "^0.6.1",
+    "vitest": "^0.32.2",
     "vue-tsc": "^1.4.2"
   }
 }
